2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* debian/strchan-core.preinst.in: corrected array subscript syntax error
	* debian/strchan-core.prerm.in: corrected array subscript syntax error
	* strchan.spec.in: corrected array subscript syntax error

2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* tests/kernel.at: correction to module test for new distros
	* AUTHORS: update release files
	* doc/manual/news.texi: update release files
	* NEWS: update release files
	* README: update release files
	* README-cvs: update release files
	* THANKS: update release files

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* strchan.spec.in: make GPL version more obvious

2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* tests/testsuite.at: testsuite factoring

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/tab.c: consistency changes
	* src/modules/tab.h: alignment change
	* src/modules/test.c: manipulated flags between frames
	* tests/local.at: corrected typo
	* src/modules/tabold.c: added verification programs
	* src/modules/tabold.h: added verification programs
	* src/modules/testboth.c: added verification programs
	* src/modules/testold.c: added verification programs

2007-04-10  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/tabold.c: reverified bit patterns in x400p driver
	* src/modules/tabold.h: reverified bit patterns in x400p driver
	* src/modules/testboth.c: reverified bit patterns in x400p driver
	* src/modules/testold.c: reverified bit patterns in x400p driver
	* src/modules/tab.c: reverified bit patterns in x400p driver
	* src/modules/tab.h: reverified bit patterns in x400p driver
	* src/modules/test.c: reverified bit patterns in x400p driver

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5